--- a/carrito.html
+++ b/carrito.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./css/StylesCarrito.css">
 
     <link rel="stylesheet" href="./css/Styles.css">
+    <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
     <title>Carrito</title>
 </head>
 
@@ -32,10 +33,9 @@
     <!-- Barra superior informativa -->
     <div class="topbar">
         <ul class="topbar-links">
-            <li><a href="#"><i class="fas fa-store"></i> Locales</a></li>
-            <li><a href="#"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
-            <li><a href="#"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
-            <li><a href="#"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
+            <li><a href="./envios.html"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
+            <li><a href="./servicio.html"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
+            <li><a href="./ventaCorpo.html"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
         </ul>
         <div class="topbar-right">
             <div class="cuenta-dropdown">
@@ -170,6 +170,7 @@
 
     <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
+    <script src="./js/tienda.js"></script>
 
 </body>
 
