--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/Styles.css">
-    <title>Home</title>
+    <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
+    <title>OESTECH</title>
 </head>
 
 <body>
 
-    <!-- Barra superior informativa -->
+    <!-- Barra superior informativa --> 
     <div class="topbar">
         <ul class="topbar-links">
-            <li><a href="#"><i class="fas fa-store"></i> Locales</a></li>
-            <li><a href="#"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
-            <li><a href="#"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
-            <li><a href="#"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
+            <li><a href="./envios.html"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
+            <li><a href="./servicio.html"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
+            <li><a href="./ventaCorpo.html"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
         </ul>
         <div class="topbar-right">
             <div class="cuenta-dropdown">
@@ -270,7 +270,7 @@
                 <h4>NOSOTROS</h4>
                 <ul>
                     <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="./Contacto.html">Contacto</a></li>
                     <li><a href="#">Locales</a></li>
                     <li><a href="#">Servicio Técnico</a></li>
                 </ul>
@@ -330,6 +330,7 @@
 
     <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
+    <script src="./js/tienda.js"></script>
 
 </body>
 
