--- a/servicio.html
+++ b/servicio.html
@@ -21,11 +21,11 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./css/StylesMiCuenta.css">
+    <link rel="stylesheet" href="./css/StylesServicios.css">
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>Mi Cuenta</title>
+    <title>OESTECH</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <div class="topbar">
         <ul class="topbar-links">
             <li><a href="./envios.html"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
-            <li><a href="./servicio.html"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
+            <li><a href="#servicio"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
             <li><a href="./ventaCorpo.html"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
         </ul>
         <div class="topbar-right">
@@ -79,81 +79,85 @@
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="./carrito.html" > <span id="contador-carrito" class="contador-carrito">0</span><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="./carrito.html"> <span id="contador-carrito" class="contador-carrito">0</span><i
+                                class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Main Secciones -->
-    <main class="main">
-        <section class="mi-cuenta">
-            <!-- LOGIN -->
-            <div id="login-section">
-                <h2>Iniciar sesión</h2>
-                <form id="login-form">
-                    <label>Email:</label>
-                    <input type="email" placeholder="Tu email" required>
+    <div class="barra-promociones">
+        <div class="promociones-contenido">
+            <span><i class="fas fa-percentage"></i>20% OFF en transferencias</span>
+            <span><i class="fas fa-credit-card"></i>6 cuotas sin interés</span>
+            <span><i class="fas fa-gift"></i>Envío gratis desde $15.000</span>
+            <span><i class="fas fa-shield-alt"></i>Compra segura garantizada</span>
+        </div>
+    </div>
 
-                    <label>Contraseña:</label>
-                    <input type="password" placeholder="Tu contraseña" required>
 
-                    <button type="submit">Entrar</button>
-                </form>
 
-                <p class="registro-link">
-                    ¿No tenés cuenta? <a href="#" onclick="mostrarRegistro()">Registrate acá</a>
-                </p>
-            </div>
+    <main class="layout-servicio">
 
-            <!-- REGISTRO -->
-            <div id="registro-section" style="display: none;">
-                <h2>Crear cuenta</h2>
-                <form id="registro-form">
-                    <label>Email:</label>
-                    <input type="email" placeholder="Tu email" required>
+            <!-- Menú lateral -->
+    <aside class="menu-corporativo">
+        <h3>Corporativo</h3>
+        <ul>
+            <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="servicio-tecnico.html">Servicio Técnico</a></li>
+            <li><a href="venta-corporativa.html">Venta Corporativa</a></li>
+            <li><a href="prensa.html">Prensa</a></li>
+            <li><a href="terminos.html">Términos y Condiciones</a></li>
+        </ul>
+    </aside>
 
-                    <label>Contraseña:</label>
-                    <input type="password" placeholder="Creá una contraseña" required>
+        <section class="servicio-tecnico">
+            <h2>Servicio Técnico</h2>
+            <p>
+                En CD Market contamos con un laboratorio técnico, con 25 años de experiencia, que ofrece el servicio de
+                calidad que nuestros clientes esperan.
+                Un laboratorio electrónico especializado en videojuegos dedicado a la reparación y mantenimiento de
+                consolas.
+            </p>
 
-                    <button type="submit">Registrarme</button>
-                </form>
+            <h3>📍 Avenida Córdoba 1176 - CABA</h3>
+            <p><strong>Horario de atención:</strong> Lunes a viernes de 9 a 18 hs.</p>
+            <p class="telefono">📞 <span>4375-1464</span></p>
 
-                <p class="registro-link">
-                    ¿Ya tenés cuenta? <a href="#" onclick="mostrarLogin()">Iniciá sesión</a>
-                </p>
-            </div>
-
-            <!-- PANEL DEL USUARIO LOGUEADO -->
-            <div id="user-panel" style="display: none;">
-                <h2>Mi Cuenta</h2>
-                <p>Bienvenido/a, <span id="nombreUsuario"></span></p>
+            <div class="listado">
+                <h4>Reparamos:</h4>
                 <ul>
-                    <li><a href="#">Mis pedidos</a></li>
-                    <li><a href="#">Mis datos</a></li>
-                    <li><a href="#" onclick="cerrarSesion()">Cerrar sesión</a></li>
+                    <li>Consolas Sony - Playstation 3, 4 y 5</li>
+                    <li>Consolas Microsoft - Xbox - X360 - XONE</li>
+                    <li>Consolas de NINTENDO</li>
+                    <li>Joysticks y Joycons</li>
+                    <li>TABLET / KINDLE / iPAD</li>
+                    <li>PC • MAC • ALL IN ONE • NOTEBOOK • NETBOOK</li>
+                    <li>MONITORES • LCD • IMPRESORAS</li>
+                    <li>AUDIO • PARLANTES • AURICULARES</li>
                 </ul>
             </div>
         </section>
 
-
     </main>
-    <!-- Footer -->
+
+        <!-- Footer -->
 
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-social">
                 <h4>SEGUINOS EN</h4>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://es-la.facebook.com/"><i class="fab fa-facebook"></i></a>
             </div>
 
             <div class="footer-section">
                 <h4>NOSOTROS</h4>
                 <ul>
                     <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="./Contacto.html">Contacto</a></li>
                     <li><a href="#">Locales</a></li>
                     <li><a href="#">Servicio Técnico</a></li>
                 </ul>
@@ -200,6 +204,7 @@
                 <button class="info-btn">+ INFO</button>
             </div>
         </div>
+
         <div class="footer-bottom">
             <div class="pagos">
                 <a href="./tienda.html"><img src="./img/mediosdepago.png" alt="bannermediosdepago"></a>
@@ -209,10 +214,11 @@
                 sin previo aviso.</small>
         </div>
     </footer>
-    
-        <script src="./js/products.js"></script>
+
+    <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
     <script src="./js/tienda.js"></script>
+
 
 </body>
 
