--- a/tienda.html
+++ b/tienda.html
@@ -22,6 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/Styles.css">
+    <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
     <title>Tienda</title>
 </head>
 
@@ -30,10 +31,9 @@
     <!-- Barra superior informativa -->
     <div class="topbar">
         <ul class="topbar-links">
-            <li><a href="#"><i class="fas fa-store"></i> Locales</a></li>
-            <li><a href="#"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
-            <li><a href="#"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
-            <li><a href="#"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
+            <li><a href="./envios.html"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
+            <li><a href="./servicio.html"><i class="fas fa-tools"></i> Servicio Técnico</a></li>
+            <li><a href="./ventaCorpo.html"><i class="fas fa-briefcase"></i> Ventas Corporativas</a></li>
         </ul>
         <div class="topbar-right">
             <div class="cuenta-dropdown">
