--- a/envios.html
+++ b/envios.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="cuenta, pedidos, usuario, panel de usuario, OESTECH">
+    <meta name="author" content="OESTECH">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -102,7 +104,7 @@
         <section class="envios-section-dark">
             <div class="envios-container-dark">
                 <div class="envios-img-dark">
-                    
+
                     <h2><span class="neon-text">Info sobre</span> <strong class="neon-highlight">Envíos</strong></h2>
                     <img src="./img/envios.png" alt="Info sobre envíos">
                 </div>
@@ -163,14 +165,14 @@
                     <li><a href="#">Nosotros</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
                     <li><a href="#">Locales</a></li>
-                    <li><a href="#">Servicio Técnico</a></li>
+                    <li><a href="./servicio.html">Servicio Técnico</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>CORPORATIVO</h4>
                 <ul>
-                    <li><a href="#">Venta Corporativa</a></li>
+                    <li><a href="./ventaCorpo.html">Venta Corporativa</a></li>
                     <li><a href="#">Prensa</a></li>
                     <li><a href="#">Términos y Condiciones</a></li>
                     <li><a href="#">Botón de Arrepentimiento</a></li>
