--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="description"
+        content="OESTECH - Tu tienda de tecnología, componentes y servicios técnicos con estilo neón oscuro. Atención personalizada y envíos a todo el país." />
+    <meta name="keywords"
+        content="tecnología, electrónica, servicios técnicos, videojuegos, consolas, informática, oestech, neón oscuro" />
+    <meta name="author" content="OESTECH" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta property="og:title" content="OESTECH - Tecnología y Electrónica" />
+    <meta property="og:description"
+        content="Visitá nuestra tienda con estilo neón oscuro. Componentes, consolas y más." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.oestech.com.ar" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
@@ -28,7 +41,7 @@
 
 <body>
 
-    <!-- Barra superior informativa --> 
+    <!-- Barra superior informativa -->
     <div class="topbar">
         <ul class="topbar-links">
             <li><a href="./envios.html"><i class="fas fa-truck"></i> Envíos / Retiros</a></li>
@@ -77,7 +90,8 @@
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="./carrito.html" > <span id="contador-carrito" class="contador-carrito">0</span><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    <li><a href="./carrito.html"> <span id="contador-carrito" class="contador-carrito">0</span><i
+                                class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </nav>
         </div>
