--- a/micuenta.html
+++ b/micuenta.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gestioná tus pedidos, datos personales y seguimiento de compras desde tu cuenta en OESTECH.">
+      <meta name="keywords" content="cuenta, pedidos, usuario, panel de usuario, OESTECH">
+  <meta name="author" content="OESTECH">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +28,7 @@
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>Mi Cuenta</title>
+    <title>OESTECH - Mi Cuenta</title>
 </head>
 
 <body>
