--- a/servicio.html
+++ b/servicio.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Reparación y mantenimiento de consolas, PC, notebooks y más. Servicio técnico profesional con 25 años de experiencia.">
+    <meta name="keywords" content="servicio técnico, reparación, consolas, mantenimiento, OESTECH">
+    <meta name="author" content="OESTECH">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +29,7 @@
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>OESTECH</title>
+    <title>OESTECH - Servicio-Tecnico</title>
 </head>
 
 <body>
@@ -99,18 +103,18 @@
 
     <main class="layout-servicio">
 
-            <!-- Menú lateral -->
-    <aside class="menu-corporativo">
-        <h3>Corporativo</h3>
-        <ul>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="servicio-tecnico.html">Servicio Técnico</a></li>
-            <li><a href="venta-corporativa.html">Venta Corporativa</a></li>
-            <li><a href="prensa.html">Prensa</a></li>
-            <li><a href="terminos.html">Términos y Condiciones</a></li>
-        </ul>
-    </aside>
+        <!-- Menú lateral -->
+        <aside class="menu-corporativo">
+            <h3>Corporativo</h3>
+            <ul>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="servicio-tecnico.html">Servicio Técnico</a></li>
+                <li><a href="venta-corporativa.html">Venta Corporativa</a></li>
+                <li><a href="prensa.html">Prensa</a></li>
+                <li><a href="terminos.html">Términos y Condiciones</a></li>
+            </ul>
+        </aside>
 
         <section class="servicio-tecnico">
             <h2>Servicio Técnico</h2>
@@ -142,7 +146,7 @@
 
     </main>
 
-        <!-- Footer -->
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="footer-top">
