--- a/ventaCorpo.html
+++ b/ventaCorpo.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Soluciones tecnológicas para empresas. Compras mayoristas, asesoramiento personalizado y soporte técnico.">
+    <meta name="keywords" content="venta corporativa, empresas, tecnología para oficinas, compras mayoristas, OESTECH">
+    <meta name="author" content="OESTECH">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,32 +103,35 @@
 
     <main>
 
-<section class="venta-corporativa">
-    <h2>VENTA CORPORATIVA</h2>
-    <p class="subenlaces">Venta a empresas | Regalos Empresariales | PCs Armadas</p>
+        <section class="venta-corporativa">
+            <h2>VENTA CORPORATIVA</h2>
+            <p class="subenlaces">Venta a empresas | Regalos Empresariales | PCs Armadas</p>
 
-    <h3 class="atencion">⚠️ ATENCIÓN: NO ES VENTA MAYORISTA. LEER ATENTAMENTE!</h3>
-    <p>
-        Atención personalizada para clientes-empresa, descuentos especiales y asesoramiento e información sobre productos de nuestro catálogo.<br>
-        CD Market puede abastecer la demanda de productos en cantidad, para regalos empresariales, promociones o acciones de marketing.
-    </p>
-    <p>¿Cómo comunicarse con nosotros? Fácil, envianos un mail a 
-        <a href="mailto:mlrodriguez@memotec.com.ar">mlrodriguez@memotec.com.ar</a> o a 
-        <a href="mailto:ventascorporativas@cdmarket.com.ar">ventascorporativas@cdmarket.com.ar</a> con los siguientes datos:
-    </p>
+            <h3 class="atencion">⚠️ ATENCIÓN: NO ES VENTA MAYORISTA. LEER ATENTAMENTE!</h3>
+            <p>
+                Atención personalizada para clientes-empresa, descuentos especiales y asesoramiento e información sobre
+                productos de nuestro catálogo.<br>
+                CD Market puede abastecer la demanda de productos en cantidad, para regalos empresariales, promociones o
+                acciones de marketing.
+            </p>
+            <p>¿Cómo comunicarse con nosotros? Fácil, envianos un mail a
+                <a href="mailto:mlrodriguez@memotec.com.ar">mlrodriguez@memotec.com.ar</a> o a
+                <a href="mailto:ventascorporativas@cdmarket.com.ar">ventascorporativas@cdmarket.com.ar</a> con los
+                siguientes datos:
+            </p>
 
-    <ul class="datos">
-        <li>Nombre y Apellido:</li>
-        <li>Empresa:</li>
-        <li>CUIT:</li>
-        <li>Producto o Categoría de Producto de interés:</li>
-        <li>Total aprox. de unidades (ej: 50 pendrives):</li>
-        <li>Teléfono:</li>
-    </ul>
+            <ul class="datos">
+                <li>Nombre y Apellido:</li>
+                <li>Empresa:</li>
+                <li>CUIT:</li>
+                <li>Producto o Categoría de Producto de interés:</li>
+                <li>Total aprox. de unidades (ej: 50 pendrives):</li>
+                <li>Teléfono:</li>
+            </ul>
 
-    <p>⏱️ Te responderemos entre las siguientes 48 horas.</p>
-    <p>📬 ¡Esperamos tu contacto!</p>
-</section>
+            <p>⏱️ Te responderemos entre las siguientes 48 horas.</p>
+            <p>📬 ¡Esperamos tu contacto!</p>
+        </section>
 
 
 
