--- a/Contacto.html
+++ b/Contacto.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+    content="¿Tenés dudas o consultas? Escribinos desde nuestro formulario de contacto. Atención personalizada.">
+    <meta name="keywords" content="contacto, soporte técnico, consultas, OESTECH">
+    <meta name="author" content="OESTECH">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +29,7 @@
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>OESTECH-Contacto</title>
+    <title>OESTECH - Contacto</title>
 </head>
 
 <body>
