--- a/carrito.html
+++ b/carrito.html
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>Carrito</title>
+    <title>OESTECH - Carrito</title>
 </head>
 
 <body>
